# blive

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  DEVELOPER_GUIDE.md  LICENSE  README.md  TODO.md  USER_GUIDE.md  _typos.toml  build.rs  cliff.toml  deny.toml  manifest.rc
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md  security.md
.github/workflows/: ci.yml  release.yml  semantic-pull-request.yml
assets/: licenses.md
crates/api/: Cargo.toml
crates/api/src/: lib.rs  room.rs  stream.rs  user.rs
crates/app/: Cargo.toml  build.rs
crates/app/.cargo/: config.toml
crates/app/src/: assets.rs  lib.rs  main.rs  state.rs  themes.rs  title_bar.rs
crates/app/src/api/: room.rs  stream.rs
resources/mac/: icon.icns
resources/windows/: blive.iss  env.iss
resources/windows/messages/: Default.zh-cn.isl
script/: bundle-mac  generate-licenses
script/licenses/: blive-licenses.toml
src/: app.rs  config.rs  core.rs  error.rs  lib.rs  logger.rs  main.rs  settings.rs  state.rs  themes.rs  title_bar.rs  tray.rs
src/api/: mod.rs  stream.rs  user.rs
src/components/: app_settings.rs  mod.rs  room_card.rs  room_input.rs  room_settings_modal.rs  settings_modal.rs
src/core/: downloader.rs  http_client.rs
src/core/downloader/: context.rs  error.rs  http_hls.rs  http_stream.rs  stats.rs  template.rs  utils.rs
src/core/http_client/: room.rs  stream.rs  user.rs
