[package]
name = "blive"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed.git", features = [] }
gpui-component = { git = "https://github.com/longbridge/gpui-component.git", features = [] }
rust-embed = { version = "8" }
anyhow = { version = "1" }
thiserror = { version = "2" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = { version = "0.2" }
futures = { version = "0.3" }
num_enum = { version = "0.7" }
leon = "3.0.2"
rfd = { version = "0.15.4", features = ["common-controls-v6"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = { version = "0.10.4" }
directories = "6"
rand = { version = "0.9.2" }
regex = "1"
strum = "0.27"
reqwest_client = { git = "https://github.com/zed-industries/zed.git" }
ffmpeg-sidecar = { version = "2", default-features = false, features = [] }

[target.'cfg(target_os = "windows")'.build-dependencies]
winresource = "0.1"

[package.metadata.bundle]
name = "直播录制"
identifier = "com.starknt.blive"
version = "0.1.0"

[build-dependencies]
embed-resource = "3.0"
ffmpeg-sidecar = { version = "2", default-features = true, features = [] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
ffmpeg-sidecar = { version = "2", default-features = true, features = [] }

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1
