[package]
name = "blive"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed.git", features = [] }
gpui-component = { git = "https://github.com/longbridge/gpui-component.git", features = [] }
reqwest_client = { git = "https://github.com/zed-industries/zed.git" }
rust-embed = { version = "8" }
anyhow = { version = "1" }
thiserror = { version = "2" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = { version = "0.2" }
futures = { version = "0.3" }
num_enum = { version = "0.7" }
leon = "3.0.2"
rfd = { version = "0.15.4", features = ["common-controls-v6"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = { version = "0.10.4" }
directories = "6"
rand = "0.9.2"
regex = "1"
strum = "0.27"
flume = "0.11"
try-lock = "0.2"
ffmpeg-sidecar = { version = "2", optional = true }
png = "0.16"

[target.'cfg(target_os = "windows")'.dependencies]
raw-window-handle = { version = "0.6" }
windows = { version = "0.61.3", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }

[target.'cfg(target_os = "windows")'.build-dependencies]
winresource = "0.1"

[target.'cfg(target_os = "linux")'.dependencies]
tray-item = { version = "0.10", features = ["ksni"] }

[target.'cfg(not(target_os = "linux"))'.dependencies]
tray-item = { version = "0.10" }

[features]
default = ["lite", "ffmpeg"]
lite = []
ffmpeg = ["dep:ffmpeg-sidecar"]

[package.metadata.bundle]
name = "BLive"
identifier = "com.starknt.blive"
icon = ["resources/mac/icon.icns"]
resources = ["resources/sidecar/ffmpeg"]
copyright = "Copyright © 2025 starknt. All rights reserved."
category = "Developer Tool"
short_description = "BLive is a tool for recording live streams."
long_description = "BLive is a tool for recording live streams."

[build-dependencies]
ffmpeg-sidecar = { version = "2" }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[profile.release]
opt-level = "z"
strip = true
lto = true
